<resources>
    <string name="app_name">Bonjour</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_bonjour_chat">Welcome to Bonjour Chat</string>
    <string name="getting_started">Getting Started</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Dont Have An Account !</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_enter_your_email">Please Enter Your Email</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="please_confirm_your_password">Please Confirm Your password</string>
    <string name="choose_an_image">choose an image</string>
    <string name="already_have_an_account">Already Have An Account !</string>
    <string name="please_enter_your_password">please enter your password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="your_name">Your Name</string>
    <string name="contacts">Contacts</string>
    <string name="unsave_this_account">Unsave this Account</string>
    <string name="logo">Logo</string>
    <string name="confirm_your_password">Confirm Your Paasword</string>
</resources>